tests/baselines/reference/parserTernaryAndCommaOperators1.errors.txt
==== tests/cases/compiler/parserTernaryAndCommaOperators1.ts (3 errors) ====
    b.src ? 1 : 2, c && d;
    ~
!!! parserTernaryAndCommaOperators1.ts(1,1): error TS2095: Cannot find name 'b'.
                   ~
!!! parserTernaryAndCommaOperators1.ts(1,16): error TS2095: Cannot find name 'c'.
                        ~
!!! parserTernaryAndCommaOperators1.ts(1,21): error TS2095: Cannot find name 'd'.
    